Adding better testing for Backing Beans with pagination